# server/api/controllers/balance/router.js
@@ -3,6 +3,7 @@ import controller from './controller';
 
 export default express
   .Router()
+  .get('/hello', controller.hello)
   .get('/:id', controller.getBalance)
   .post('/', controller.move)
   .post('/user', controller.addUser)
